--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "core-js": "^3.8.3",
     "daisyui": "^2.51.0",
     "epubjs": "^0.3.93",
+    "flowbite": "^1.6.3",
     "vue": "^3.2.13",
     "vue-router": "4",
     "vuex": "^4.0.0"
