--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
-  "name": "vue-reader",
-  "version": "0.1.0",
+  "name": "vuereader",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "dependencies": {
-    "core-js": "^3.8.3",
-    "daisyui": "^2.51.0",
-    "epubjs": "^0.3.93",    
-    "vue": "^3.2.13",
-    "vue-router": "4",
-    "vuex": "^4.0.0"
+  "dependencies": {    
+    "axios": "^1.3.4",
+    "daisyui": "^2.51.4",
+    "epubjs": "^0.3.93",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
-    "tailwindcss": "^3.2.7"
+    "@vitejs/plugin-vue": "^4.0.0",
+    "tailwindcss": "^3.2.7",
+    "vite": "^4.1.4"
   }
 }
