--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .DS_Store
 node_modules
+yarn.lock
+
 /dist
 /public/*.json
 /public/Books/
@@ -7,7 +9,7 @@ node_modules
 
 
 # local env files
-.env.local
+.env
 .env.*.local
 
 # Log files
