--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {    
+  "dependencies": {
     "axios": "^1.3.4",
     "daisyui": "^2.51.4",
+    "dotenv": "^16.0.3",
     "epubjs": "^0.3.93",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
