--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "serve": "vite preview"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -17,8 +17,9 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "tailwindcss": "^3.2.7",
-    "vite": "^4.1.4"
+    "@vitejs/plugin-vue": "^1.6.1",
+    "vite": "^2.5.4",
+    "sass": "^1.32.7",
+    "tailwindcss": "^3.2.7"
   }
 }
