--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=nuxtapp
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ~/.postgres_data:/var/lib/postgresql/data
 
 volumes:
   postgres_data:
